# ray-exomem

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  build.rs
.claude/skills/stress-test-ray-exomem/: SKILL.md  report-template.md
.codex/environments/: environment.toml
.github/workflows/: deploy.yml
archive/2026-04-14_postgres-migration/: design.md  plan.md
archive/2026-04-21_drop-jsonl-migration/: plan.md
archive/2026-04-24_first_login_seeded_brain/: design.md
bootstrap/: README.md  example.json
docs/: agent_guide.md  datalog_compared.md
docs/superpowers/plans/: 2026-04-11-nested-exoms-redesign.md  2026-04-13-ui-polish.md  2026-04-14-auth-mcp-admin-plan.md  (+1 more)
examples/: alice.ray  alice_assertions.ray  assert_retract.ray  dreaming.ray  dreaming_consolidation.ray  inquisition.ray  inquisition_validation.ray  multi_relation.ray  native_smoke.ray  recursive_reach.ray
migrations/: 001_initial.sql  002_allowed_emails.sql  003_ui_graph_layouts.sql
plans/: 2026-04-05-daemon-eval-i64.md  2026-04-07-bitemporal-followup.md  2026-04-09-datalog-native-enhancement-plan.md  dx_improvements.md  rayforce2_storage_outline.md
scripts/: redeploy.sh
src/: agent_guide.rs  backend.rs  brain.rs  client.rs  commands.rs  context.rs  datom.rs  exom.rs  fact_value.rs  ffi.rs  http_error.rs  lib.rs  main.rs  mcp.rs  path.rs  rayfall_ast.rs  rayfall_parser.rs  rules.rs  scaffold.rs  server.rs  storage.rs  sym_rewrite.rs  system_schema.rs  tree.rs  web.rs
src/auth/: access.rs  admin.rs  middleware.rs  mod.rs  provider.rs  routes.rs  store.rs
src/db/: jsonl_auth.rs  jsonl_exom.rs  mod.rs  pg_auth.rs  pg_exom.rs  pg_ui_state.rs
tests/: api_actions.rs  api_guide.rs  api_rename.rs  api_tree.rs  auth_admin.rs  auth_basic.rs  auth_shares.rs  cli.rs  mcp_basic.rs  pg_integration.rs  smoke.rs  sym_rewrite_migration.rs  typed_facts_e2e.rs
tests/common/: daemon.rs  mod.rs
ui/: .env.example  components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
ui/scripts/: check-palette.mjs
ui/src/: app.css  app.html
(+97 files in other folders)
