[package]
name = "ray-exomem"
version = "0.1.1"
edition = "2021"
description = "Native rayforce2 knowledge-base front-end — Rayfall list-style syntax only"
build = "build.rs"
license = "MIT"

[features]
default = []
daemon = []

[dependencies]
anyhow = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
dirs = "5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
