[package]
name = "ray-exomem"
version = "0.1.1"
edition = "2021"
description = "Native rayforce2 knowledge-base front-end — Rayfall list-style syntax only"
build = "build.rs"
license = "MIT"

[features]
default = []
daemon = []
test-auth = []

[dependencies]
anyhow = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
dirs = "5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dashmap = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
